@@ -1,3 +1,12 @@
+2017-06-23  Julien Bect  <julien.bect@centralesupelec.fr>
+
+	stk_dataframe.m: Guess the size when the first input is empty
+
+	* arrays/@stk_dataframe/stk_dataframe.m: Deduce the number of
+	columns and rows from the length of colnames and rownames,
+	respectively, when the first input argument is empty.  Note that
+	this patch changes the object generated by the default constructor.
+
 2017-06-20  Julien Bect  <julien.bect@centralesupelec.fr>
 
 	stk_dominatedhv.m: Accept @stkçdataframe inputs
